Fix project image size on mobile
(at least I tried)

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -97,6 +97,7 @@ div.project-card .image {
 div.project-card img,
 div.project-card div {
   min-width: 100%;
+  max-width: 100%;
   aspect-ratio: 100 / 47;
 
   border-radius: 10px 10px 0px 0px;
